fix padding right on small screens, maybe?

--- a/public/assets/css/mobilestyles.css
+++ b/public/assets/css/mobilestyles.css
@@ -150,10 +150,6 @@ main.events .day .event .tags {
   }
 }
 @media only screen and (max-width: 550px) {
-  main.programm .projectswrap .projecttile {
-    width: 100%;
-  }
-
   main.programm #filterline ul li.back {
     width: 100%;
   }
